--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "16.x"
+    "node": ">18.x"
   },
   "scripts": {
     "dev": "vite",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -31,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "sass": "^1.80.7",
-    "typescript": "^5.7.2",
+    "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.11"
   }
